v, 1.08, November 27, 1996 

o eg/build is now a perl script, not a shell script

o renamed genmake.pl to genmake so it doesn't end up in site_perl

o added new examples to eg/, uri-url.c and regex.c/regex.pl

o 'make clean' now cleans the t/ directory

o applied patch from Sven Verdoolaege <skimo@breughel.ufsia.ac.be>
  to remove space in perl_inc

v, 1.07, July 21, 1996

o renamed to ExtUtils::Embed (last name change I swear!)
  ExtUtils::Embed will be part of the standard Perl distribution
  as of 5.003_01

o fixed typo in @EXPORT

v, 1.06, July 14, 1996

o applied patch from Andreas Koenig <k@anna.in-berlin.de> to fix
  bug with NeXT systems

v, 1.05, July 2, 1996

o Object for accessing MakeMaker methods now blessed into 'MY' class to avoid warnings

o Updated documentation a bit

v, 1.04, June 17, 1996

o Added perl_inc, ccflags, ccdlflags and ccopts functions

o Added eg/ directory with examples from the perlembed manpage

v, 1.03, June 10, 1996

o Changed name from Devel::embed to ExtUtils::embed

v,1.02, May 6, 1996

o we now use MakeMaker's catdir()

o if $] > 5.002 we add the dXSUB_SYS macro to the body of xs_init

o added a copy of minimod.PL that uses Devel::embed,
  incase someone else would like to see them share

o added 'extralibs.ld' to ldopts() if found

o dropped extra curlies around newXS()'s

o changed the env pointer in t/embed.c's perl_parse() to NULL
As Tim Bunce pointed out:
A NULL means 'use the current environment'.

Passing an explicit env pointer will core dump if it becomes out of date
before it's used (e.g. a new env var is defined). The perl -d:foo mechanism
will define a new env var.

o updated documentation a bit

v,1.01, April 3, 1996

o Same as 1.00, but without test build junk on the tape

v,1.00, April 1, 1996

o Initial version