@@ -1,3 +1,10 @@
+
+v, 1.09, November 29, 1996 
+
+o applied patchlet from Andreas Koenig to s/archlib/archlibexp/
+
+o updated eg/README
+
 v, 1.08, November 27, 1996 
 
 o eg/build is now a perl script, not a shell script
